force-app/main/default/objects/Invoice__c/fields/Buyer_Customer_Code__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Customer_Code__c</fullName>
    <label>Buyer Customer Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>