force-app/main/default/objects/Invoice__c/fields/Consignee_Customer_Code__c.field-meta.xml
<CustomField>
    <fullName>Consignee_Customer_Code__c</fullName>
    <label>Consignee Customer Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>