force-app/main/default/objects/Invoice__c/fields/Date_Time_of_Removal__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_of_Removal__c</fullName>
    <label>Date &amp; Time of Removal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>