force-app/main/default/objects/Invoice__c/fields/Delivered__c.field-meta.xml
<CustomField>
    <fullName>Delivered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Delivered</label>
    <type>Checkbox</type>
</CustomField>