force-app/main/default/objects/Invoice__c/fields/GrNo__c.field-meta.xml
<CustomField>
    <fullName>GrNo__c</fullName>
    <label>GrNo</label>
    <length>30</length>
    <type>Text</type>
</CustomField>