force-app/main/default/objects/Invoice__c/fields/IGST_Percent__c.field-meta.xml
<CustomField>
    <fullName>IGST_Percent__c</fullName>
    <label>IGST Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>