force-app/main/default/objects/Invoice__c/fields/Rounding_Off__c.field-meta.xml
<CustomField>
    <fullName>Rounding_Off__c</fullName>
    <label>Rounding Off</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>