force-app/main/default/objects/Invoice__c/fields/Total_Taxable__c.field-meta.xml
<CustomField>
    <fullName>Total_Taxable__c</fullName>
    <label>Total Taxable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>