force-app/main/default/objects/Invoice__c/fields/Total_Taxes__c.field-meta.xml
<CustomField>
    <fullName>Total_Taxes__c</fullName>
    <label>Total Taxes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>