force-app/main/default/objects/Invoice__c/fields/Vehicle_Number__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Number__c</fullName>
    <label>Vehicle Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>