force-app/main/default/objects/Invoice__c/listViews/Overdue.listView-meta.xml
<ListView>
    <fullName>Overdue</fullName>
    <columns>Invoice_No__c</columns>
    <columns>Invoice_Date__c</columns>
    <columns>Buyer__c</columns>
    <columns>Consignee__c</columns>
    <columns>Date_Time_of_Removal__c</columns>
    <filterScope>Everything</filterScope>
    <label>Overdue Invoice</label>
</ListView>